Fixed overflow on mainContent

--- a/src/App.global.css
+++ b/src/App.global.css
@@ -38,12 +38,13 @@
     display: grid;
     height: 100vh;
     grid-template-columns: var(--aside-width-small) 1fr;
-    grid-template-rows: var(--header-height) 1fr var(--footer-height);
+    grid-template-rows: var(--header-height) calc(100vh - var(--header-height) - var(--footer-height)) var(--footer-height);
     grid-template-areas:
         "nav header"
         "nav content"
         "foot foot";
     transition: 0.5s;
+    overflow: hidden;
 }
 
 aside.menu-area {
