--- a/src/components/Terminal/Terminal.css
+++ b/src/components/Terminal/Terminal.css
@@ -2,8 +2,8 @@
     background-color: var(--bg-color);
     border-radius: 10px;
     padding: 1rem;
-    width: 800px;
-    overflow: hidden;
+    width: calc(100% - 2rem);
+    overflow: auto;
     white-space: pre-line;
     text-align: left;
 }
